# contour-wall

./: .gitignore  CONTRIBUTING.md  README.md  package-lock.json  package.json
.github/workflows/: contourwall.yml  rust.yml
PCB/: BOM_PCB_ELLIE_DISPLAY_PANEL_2023-12-06.csv  BOM_PCB_ELLIE_PANEL_v2_2023-09-21(1).csv  PCB_PCB_ELLIE_PANEL_v2.json  PickAndPlace_PCB_ELLIE_DISPLAY_PANEL_2023-12-06.csv  PickAndPlace_PCB_ELLIE_PANEL_v2.csv  README.md  SCH_ELLIE_DISPLAY_PANEL_2023-12-06.json
PCB/Gerber_PCB_ELLIE_PANEL_v2/: Drill_NPTH_Through.DRL  Drill_PTH_Through.DRL  Drill_PTH_Through_Via.DRL  Gerber_BoardOutlineLayer.GKO  Gerber_BottomLayer.GBL  Gerber_BottomSilkscreenLayer.GBO  Gerber_BottomSolderMaskLayer.GBS  Gerber_DocumentLayer.GDL  Gerber_TopLayer.GTL  Gerber_TopPasteMaskLayer.GTP  Gerber_TopSilkscreenLayer.GTO  Gerber_TopSolderMaskLayer.GTS
PCB/display_panel/: BOM_ELLIE_DISPLAY_PANEL.csv  PickAndPlace_PCB_ELLIE_DISPLAY_PANEL.csv  README.md  SCH_ELLIE_DISPLAY_PANEL.json
PCB/esp32s3_breakoutboard/: BOM_ELLIE_BREAKOUTBOARD_ESP32S3.csv  PickAndPlace_PCB_ELLIE_BREAKOUTBOARD_ESP32S3.csv  README.md  SCH_ELLIE_BREAKOUTBOARD_ESP32S3.json
demos/: README.md  handtrack_colour.py  handtrack_colour_drawing.py  handtrack_drawing.py  insights_demo.py  multiperson.py  pose_estimation.py  wave_rainbow.py
docs/: common_errors.md  getting_started.md
docs/construction/: README.md
docs/hardware_architecture/: ELLIE Hardware Architecture.docx  README.md
docs/software_architecture/: ELLIE_software_achitecture.docx
firmware/: README.md  firmware.ino
font/: char_100.csv  char_101.csv  char_102.csv  char_103.csv  char_104.csv  char_106.csv  char_107.csv  char_108.csv  char_109.csv  char_110.csv  char_111.csv  char_112.csv  char_113.csv  char_114.csv  char_115.csv  char_116.csv  char_117.csv  char_118.csv  char_119.csv  char_121.csv  char_123.csv  char_125.csv  char_126.csv  char_32.csv  char_33.csv  char_34.csv  char_35.csv  char_37.csv  char_39.csv  char_40.csv  char_41.csv  char_42.csv  char_43.csv  char_45.csv  char_46.csv  char_47.csv  char_49.csv  char_50.csv  char_51.csv  char_52.csv  (+44 more)
lib/: README.md  contourwall.py  insights_demo.py  requirements.txt  resting_animation_standalone.py  resting_annimation.py  resting_annimation_v2.py  wave_rainbow.py
lib-rust/contourwall/: Cargo.toml  test.py
lib-rust/cw-lib/: Cargo.toml
lib-rust/cw-lib/src/: lib.rs
lib/cw-core/: Cargo.toml  README.md
lib/cw-core/src/: lib.rs  status_code.rs  tile.rs  util.rs
lib/cw-ffi/: Cargo.toml
lib/old/: contourwall.py
lib/old/cw-core/: Cargo.toml  README.md
lib/old/cw-core/src/: lib.rs
lib/samples/: fading_rainbow.py  insights_demo.py  resting_annimation.py  walking.py
lib/wrappers/rust/: Cargo.toml  README.md  Readme.md
lib/wrappers/rust/src/: lib.rs
research/: .gitignore  4_webcam.py  4_webcam_right_cams.py  README.md  image-stitching.py  image.py  image_segment_watershed.py  mediapipe_pose.py  midas_depth.py  midas_ml.py  midas_webcam_feed.py  pose_estimation.py  requirements.txt  yolo8.py  yolo8_webcam.py
scripts/: put_tile_addr.py  setup.ps1  setup.sh
(+50 files in other folders)
