[package]
name = "contourwall_core"
version = "0.2.0"
edition = "2021"
description = "Provides a low-level interface to control the Contour Wall"
license = "MIT"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["dylib"]

[profile.dev]
overflow-checks = false

[dependencies]
serialport = "4.3.0"
rayon = "1.10.0"
log = "0.4"
env_logger = "0.9"
