[package]
name = "contourwall_core"
description = "Provides a low-level interface to control the Contour Wall"
version = "0.2.1"
rust-version = "1.75"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[profile.dev]
overflow-checks = false

[dependencies]
serialport = "4.3.0"
rayon = "1.10.0"
log = "0.4"
env_logger = "0.9"
