workspace = { members = ["cw-core2"] }
[package]
name = "contourwall_core"
version = "0.1.0"
edition = "2021"
authors = ["Wouter Pennings"]
description = "contourwall_core provides an interface for controlling the tiles using the ContourWall protocol over serial communication"
repository = "https://github.com/StrijpT-Ellie/contour-wall"
license = "MIT"
rust-version = "1.75"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[profile.dev]
overflow-checks = false

[dependencies]
serialport = "4.3.0"
