[package]
name = "contourwall"
description = "High-level Rust interface to control the Contour Wall"
version = "0.1.0"
rust-version = "1.75"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
contourwall_core = "0.2.1"
#Uncomment the following line if you are developing the wrapper and want the newest version of the core libary
#contourwall_core = {path = "../../cw-core" }

ndarray = "0.15.6"
serialport = "4.3.0"
